# pandemic-config-gui

./: LICENSE  README.md  pyproject.toml
examples/: config_simulation.yaml
src/: app.py  configPanel.py  graph.py  main.py  yamlLoader.py
src/style/: theme.qss
